<resources>
    <string name="app_name">Diary</string>
    <string name="cardView_button">CardView Button</string>
    <string name="cardView_Image">Cardview Image</string>
    <string name="cardView_Title">Title</string>
    <string name="cardView_Date">Date</string>
    <string name="cardView_Location">Location</string>
    <string name="main_memory">Memory</string>
    <string name="main_title">Title</string>
    <string name="main_location">Location</string>
    <string name="main_date">Date</string>
    <string name="add_button">Add New Memory</string>
    <string name="emoji_info">CHOOSE AN EMOTION FOR THE MEMORY</string>
    <string name="tired_face">Tired</string>
    <string name="happy_face">Happy</string>
    <string name="sad_face">Sad</string>
    <string name="loving_face">Loving</string>
    <string name="angry_face">Angry</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="newPassword">New Password</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="confirm_button">Confirm</string>
    <string name="title_activity_all_memories">AllMemoriesActivity</string>
</resources>