<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/purple_200">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardView_Title"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintStart_toEndOf="@id/emotion"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cardView_Date"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintStart_toEndOf="@id/emotion"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardView_Location"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.117"
                app:layout_constraintStart_toEndOf="@+id/emotion"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:layout_constraintVertical_bias="0.483" />

            <ImageView
                android:id="@+id/emotion"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/cardView_Image"
                app:layout_constraintBottom_toTopOf="@+id/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="1dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>