<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoryPageActivity"
    android:id="@+id/memoryPage"
    android:background="@color/black">

    <include layout="@layout/emotion_select"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="66dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:src="@drawable/ic_baseline_share_24"
        android:translationZ="10dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@id/confirmButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/confirmButton"
        android:layout_width="66dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:src="@drawable/ic_baseline_check_24"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/pdfConverter"
        android:layout_width="66dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:src="@drawable/ic_baseline_picture_as_pdf_24"
        android:translationZ="10dp"
        app:layout_constraintEnd_toStartOf="@id/shareButton"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editMemory"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="18"
        android:gravity="start|top"
        android:hint="@string/main_memory"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTitle" />

    <TextView
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="9"
        android:hint="@string/main_date"
        android:minHeight="48dp"
        android:paddingTop="12sp"
        android:textColor="#757575"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

    <TextView
        android:id="@+id/editLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="9"
        android:hint="@string/main_location"
        android:minHeight="48dp"
        android:paddingTop="12sp"
        android:textColor="#757575"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"/>

    <Button
        android:id="@+id/editButtonLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:color="#66FF0000"
        android:alpha="0.25"
        app:layout_constraintTop_toTopOf="@id/editLocation"
        app:layout_constraintBottom_toBottomOf="@id/editLocation"
        app:layout_constraintStart_toStartOf="@id/editLocation"
        app:layout_constraintEnd_toEndOf="@id/editLocation"/>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="12"
        android:hint="@string/main_title"
        android:textColor="#757575"
        android:textColorHint="#757575"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editLocation"
        android:autofillHints="" />

    <include layout="@layout/password"/>
    <include layout="@layout/createpassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>